syntax = "proto3";

package ai.lzy.v1.workflow;

option java_outer_classname = "LWSD";
option java_package = "ai.lzy.v1.workflow";

message AzureCredentials {
  string connectionString = 1;
}

message AmazonCredentials {
  string endpoint = 1;
  string accessToken = 2;
  string secretToken = 3;
}

message SnapshotStorage {
  string bucket = 1;

  oneof kind {
    AmazonCredentials amazon = 2;
    AzureCredentials azure = 3;
  }
}


message Operation {
  string name = 1;
  /* optional */ string description = 2;
  string command = 3;  // command to execute
  repeated string inputSlots = 4;
  repeated string outputSlots = 5;

  optional string dockerImage = 6;  // Optional. If not set, running on default Lzy image

  oneof env {
    /* optional */ PythonEnvSpec python = 7;
  }

  Requirements requirements = 8;

  message Requirements {
    int32 cpu = 1;  // Minimal required cpu
    string mem = 2;  // Minimal required mem
    string gpu = 3;  // Minimal required gpu
    string driveSize = 4;  // Minimal required drive size
  }

  message PythonEnvSpec {
    string name = 1;
    string yaml = 2;
    repeated LocalModule localModules = 3;

    message LocalModule {
      string name = 1;
      string uri = 2;
    }
  }
}

message Graph {
  string name = 1;

  repeated EdgeDescription links = 2;

  message EdgeDescription {

  }
}